--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "@heroicons/vue": "^2.1.1",
+    "axios": "^1.6.5",
+    "firebase": "^10.7.1",
+    "pinia": "^2.1.7",
     "uid": "^2.0.0",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
@@ -15,6 +18,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.7",
+    "firebase-tools": "^13.0.3",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6",
     "vite": "^2.9.12"
